[package]
name = "lang_lib"
version = "0.1.0"
authors = ["Benedikt Mandelkow <benedikt.mandelkow@rwth-aachen.de>"]
edition = "2018"
publish = false

[dependencies]
once_cell = "1.3"
color-backtrace = "*"

cranelift = "0.62.0"
cranelift-module = "0.62.0"
cranelift-codegen = { version = "0.62.0", default-features = false, features = ["std"] }
cranelift-native = "0.62.0"
cranelift-object = "0.62.0"
cranelift-simplejit = "0.62.0"

[dev-dependencies]
criterion = { version = "0.3", default-features = false }
